Fix body overflow, remove img element after lightness calculation

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -10,13 +10,18 @@ body>main {
 
 /* Track */
 ::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+
+.scrollbar-sm::-webkit-scrollbar {
     width: 6px;
     height: 6px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    background-color: #0004;
 }
 
 .scrollbar-hide::-webkit-scrollbar {
